<resources>
    <string name="app_name">Hotel App</string>

    <!-- Used in Main Activity -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- Menu Strings -->
    <string name="menu_home">Home</string>
    <string name="menu_register_owner">Register Owner</string>
    <string name="menu_register_manager">Register Manager</string>
    <string name="menu_register_receptionist">Register Receptionist</string>
    <string name="menu_add_hotel">Add Hotel</string>
    <string name="menu_logout">Logout</string>
    <string name="set_hotel_owner">Set Hotel Owner</string>
    <string name="create_client">Create Client</string>
    <string name="create_reservation">Create Reservation</string>
    <!-- Fragment Titles -->
    <string name="home">Home</string>
    <string name="register_owner">Register Owner</string>
    <string name="register_manager">Register Manager</string>
    <string name="register_receptionist">Register Receptionist</string>
    <string name="add_hotel">Add Hotel</string>
    <!-- Login screen strings -->
    <string name="password_login">Password</string>
    <string name="email_login">Email</string>
    <!-- Register Owner screen strings -->
    <string name="error_text">Error getting the hotel data!</string>
    <string name="owner_name_label">Owner Name</string>
    <string name="owner_email_label">Owner Email</string>
    <string name="owner_password_label">Owner Password</string>
    <string name="btn_add_owner">Add Owner</string>
    <!-- Add Hotel Strings -->
    <string name="add_hotel_label">Hotel Name</string>
    <!-- Add Manager Screen Strings -->
    <string name="btn_add_manager">Add Manager</string>
    <string name="manager_name_label">Manager Name</string>
    <string name="manager_email_label">Manager Email</string>
    <string name="manager_password_label">Manager Password</string>
    <!-- Add Receptionist Screen Strings -->
    <string name="btn_add_receptionist">Add Receptionist</string>
    <string name="receptionist_name_label">Receptionist Name</string>
    <string name="receptionist_email_label">Receptionist Email</string>
    <string name="receptionist_password_label">Receptionist Password</string>
    <!-- Create Client Screen Strings -->
    <string name="client_fname_label">Client First Name</string>
    <string name="client_lname_label">Client Last Name</string>
    <string name="client_email_label">Client Email</string>
    <string name="btn_create_client_label">Create Client</string>
    <!-- Create Reservation Screen Strings -->
    <string name="reservation_type_label">Reservation Type</string>
    <string name="room_type_label">Room Type</string>
    <string name="room_number_label">Room Number</string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="additional_service_label">Additional Service</string>
    <string name="btn_create_reservation_label">Create Reservation</string>
    <string name="btn_clear_radio_button">Clear</string>
</resources>