<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itemHome"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/itemRegisterOwner"
            android:title="@string/menu_register_owner"
            android:icon="@drawable/ic_register"/>
        <item
            android:id="@+id/itemRegisterManager"
            android:title="@string/menu_register_manager"
            android:icon="@drawable/ic_register"/>
        <item
            android:id="@+id/itemRegisterReceptionist"
            android:title="@string/menu_register_receptionist"
            android:icon="@drawable/ic_register"/>
        <item
            android:id="@+id/itemAddHotel"
            android:title="@string/menu_add_hotel"
            android:icon="@drawable/ic_hotel"/>
        <item
            android:id="@+id/itemLogout"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>